Added Simple File Viewer
added file viewer, and added more to README.md